--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,13 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    = yield
+    #header
+      .nav
+        %ul
+          -if user_signed_in?
+            %li= link_to "Sign out", destroy_user_session_path, :method => :delete
+          -else
+            %li= link_to "Sign in", new_user_session_path
+    #content
+      = render "shared/flash", :flash => flash
+      = yield
