--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -1,2 +1,14 @@
-<h1>Accounts#new</h1>
-<p>Find me in app/views/accounts/new.html.erb</p>
+%h2#page_title New account
+
+=render "shared/errors", :resource => @account
+=form_for(@account) do |f|  
+  %div
+    =f.label :account_type
+    %br
+    =f.select :account_type, options_for_select([:asset, :liability, :equity]), :autofocus => true
+  %div
+    =f.label :name
+    %br
+    =f.text_field :name
+  .actions
+    =f.submit "Save"
