--- a/app/views/shared/_errors.html.haml
+++ b/app/views/shared/_errors.html.haml
@@ -1,4 +1,4 @@
 -if resource.errors.any?
   %ul#errors
-    -resourc.errors.full_messages.each do |message|
+    -resource.errors.full_messages.each do |message|
       %li= message
