--- a/app/views/accounts/_account_row.html.haml
+++ b/app/views/accounts/_account_row.html.haml
@@ -1,3 +1,4 @@
-%tr
+%tr{ :id => "account_#{account.id}" }
   %td= link_to account.name, edit_account_path(account)
   %td 0.00
+  %td.action_cell= render "shared/delete_form", :resource => account, :url => account_path(account)
