--- a/app/views/accounts/_account_row.html.haml
+++ b/app/views/accounts/_account_row.html.haml
@@ -1,4 +1,6 @@
 %tr{ :id => "account_#{account.id}" }
-  %td= link_to account.name, edit_account_path(account)
+  %td= link_to account.name, account_path(account)
   %td 0.00
-  %td.action_cell= render "shared/delete_form", :resource => account, :url => account_path(account)
+  %td.action_cell
+    = link_to "Edit", edit_account_path(account)
+    = render "shared/delete_form", :resource => account, :url => account_path(account)
