--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -23,5 +23,17 @@
     %td
   -@accounts.equities.each do |account|
     =render "account_row", :account => account
+  %tr
+    %td Income
+    %td.number_column 0.00
+    %td
+  -@accounts.income.each do |account|
+    =render "account_row", :account => account
+  %tr
+    %td Expense
+    %td.number_column 0.00
+    %td
+  -@accounts.expense.each do |account|
+    =render "account_row", :account => account
 .actions
   =link_to 'Add', new_account_path
