renamed equities scope to equity

--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -21,7 +21,7 @@
     %td Equity
     %td.number_column 0.00
     %td
-  -@accounts.equities.each do |account|
+  -@accounts.equity.each do |account|
     =render "account_row", :account => account
   %tr
     %td Income
