working on posting nested attributes to transactions controller

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
       .nav
         %ul
           -if user_signed_in?
+            %li= link_to "Home", home_path
             %li= link_to "Sign out", destroy_user_session_path, :method => :delete
           -else
             %li= link_to "Sign in", new_user_session_path
