--- a/app/views/transactions/_form.html.haml
+++ b/app/views/transactions/_form.html.haml
@@ -13,11 +13,12 @@
         %th Account
         %th Action
         %th Amount
-      =f.fields_for :items, items do |item_form|
-        %tr
-          %td= item_form.select :account_id, options_from_collection_for_select(transaction.user.accounts, "id", "name")
-          %td= item_form.select :action, [:credit, :debit]
-          %td= item_form.text_field :amount
-      
-  .actions
+      -items.each_with_index do |item, index|
+        =f.fields_for :items, item do |item_form|
+          %tr{id: "transaction_item_#{index}"}
+            %td= item_form.select :account_id, options_from_collection_for_select(transaction.user.accounts, "id", "name")
+            %td= item_form.select :action, [:credit, :debit]
+            %td= item_form.text_field :amount
+
+            .actions
     =f.submit 'Submit'
