--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
         %ul
           -if user_signed_in?
             %li= link_to "Home", home_path
+            %li= link_to "Entities", entities_path
             %li= link_to "Sign out", destroy_user_session_path, :method => :delete
           -else
             %li= link_to "Sign in", new_user_session_path
