fleshing out the entities controller spec

--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -1,4 +1,4 @@
-=render "shared/errors", :resource => @account
+=render "shared/errors", :resource => account
 =form_for([account.entity, account]) do |f|  
   %div
     =f.label :account_type
