--- a/app/views/entities/index.html.haml
+++ b/app/views/entities/index.html.haml
@@ -1,8 +1,10 @@
 %h2#page_title Entities
 
-%table{cellspacing: 0, cellpadding:0}
+%table#entities_table{cellspacing: 0, cellpadding:0}
   %tr
     %th Name
   -@entities.each do |entity|
     %tr
-      %td= entity.name
+      %td= link_to entity.name, edit_entity_path(entity)
+.actions
+  =link_to 'Add', new_entity_path
