--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -1,6 +1,6 @@
 %h2#page_title Entity
 
-%table#account_table{:cellspacing => 0, :cellpadding => 0}
+%table#entity_table{:cellspacing => 0, :cellpadding => 0}
   %tr
     %th Name
     %td= @entity.name
