--- a/app/views/entities/index.html.haml
+++ b/app/views/entities/index.html.haml
@@ -6,7 +6,9 @@
     %th
   -@entities.each do |entity|
     %tr{id: "entity_#{entity.id}" }
-      %td= link_to entity.name, edit_entity_path(entity)
-      %td= render "shared/delete_form", resource: entity, url: entity_url(entity)
+      %td= link_to entity.name, entity_path(entity)
+      %td
+        =render "shared/delete_form", resource: entity, url: entity_url(entity)
+        =link_to "Edit", edit_entity_path(entity)
 .actions
   =link_to 'Add', new_entity_path
