finished fixing features after adding entities

--- a/app/views/transactions/index.html.haml
+++ b/app/views/transactions/index.html.haml
@@ -9,3 +9,6 @@
       %td= transaction.transaction_date
       %td= transaction.description
 =render 'form', transaction: @transaction, items: @items
+
+.actions
+  =link_to 'Back', entity_path(@account.entity)
