more changes to support transactions as children of entities

--- a/app/views/accounts/_account_row.html.haml
+++ b/app/views/accounts/_account_row.html.haml
@@ -1,5 +1,5 @@
 %tr{ :id => "account_#{account.id}" }
-  %td= link_to account.name, account_transactions_path(account)
+  %td= account.name
   %td= "%.2f" % account.balance
   %td.action_cell
     = link_to "Edit", edit_account_path(account)
