--- a/app/views/transactions/_form.html.haml
+++ b/app/views/transactions/_form.html.haml
@@ -1,4 +1,4 @@
-=form_for(transaction, url: account_transactions_path(@account)) do |f|
+=form_for([transaction.entity, transaction]) do |f|
   %div
     =f.label :transaction_date
     %br
