--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -1,2 +1,4 @@
 %h2#page_title Edit account
-=render "form", :account => @account
+=render "shared/errors", :resource => @account
+=form_for(@account) do |f|  
+  =render "form_fields", account: @account, f: f
