fixed routing errors in entity creation and fixed 'enter transaction' feature to reflect hierarchy

--- a/app/views/entities/edit.html.haml
+++ b/app/views/entities/edit.html.haml
@@ -1,2 +1,4 @@
 %h2#page_title Edit entity
-=render "form", :entity => @entity
+=render "shared/errors", :resource => @entity
+=form_for(@entity) do |f|  
+  =render "form_fields", entity: @entity, f: f
