--- a/app/views/entities/index.html.haml
+++ b/app/views/entities/index.html.haml
@@ -7,8 +7,8 @@
   -@entities.each do |entity|
     %tr{id: "entity_#{entity.id}" }
       %td= link_to entity.name, entity_path(entity)
-      %td
-        =render "shared/delete_form", resource: entity, url: entity_url(entity)
+      %td.action_cell
         =link_to "Edit", edit_entity_path(entity)
+        =render "shared/delete_form", resource: entity, url: entity_url(entity)
 .actions
   =link_to 'Add', new_entity_path
