--- a/app/views/accounts/_account_row.html.haml
+++ b/app/views/accounts/_account_row.html.haml
@@ -1,6 +1,6 @@
 %tr{ :id => "account_#{account.id}" }
   %td= account.name
-  %td= "%.2f" % account.balance
+  %td.number_column= "%.2f" % account.balance
   %td.action_cell
-    = link_to "Edit", edit_account_path(account)
+    = link_to "Edit", edit_account_path(account), class: 'edit_button', title: 'Click here to edit this account.'
     = render "shared/delete_form", :resource => account, :url => account_path(account)
