--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -18,7 +18,7 @@ $black: #000;
 }
 
 body {
-  margin: 0px;
+  margin: 0;
   padding: 0px;
   font: {
     family: arial;
@@ -38,8 +38,13 @@ a {
 }
 
 #header {
-  margin: 0px;
-  padding: 4px;
+  margin: 0;
+  padding: {
+    left: 2em;
+    right: 1em;
+    top: 1em;
+    bottom: 1em;
+  }
   box-shadow: 0em .5em .2em $shadow-color;
 }
 
@@ -49,11 +54,11 @@ a {
  
 nav[role="navigation"] ul {
   list-style-type: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-weight: bold;
   li {
-    margin: 0px;
+    margin: 0;
     display: inline-block;
     padding: 0px;
   }
@@ -122,7 +127,12 @@ nav[role="navigation"] ul {
 }
 
 #content {
-  margin: 8px;
+  margin: {
+    left: 2em;
+    right: 1em;
+    top: 1em;
+    bottom: 1em;
+  }
 }
 
 .action_cell {
