--- a/app/views/accounts/_accounts_table.html.haml
+++ b/app/views/accounts/_accounts_table.html.haml
@@ -5,33 +5,33 @@
     %th.action_cell &nbsp;
   %tr.account_category
     %td Assets
-    %td.number_column= "%.2f" % accounts.asset.sum(:balance)
+    %td.number_column= "%.2f" % sum(accounts.asset)
     %td
   -accounts.asset.each do |account|
-    =render "accounts/account_row", :account => account
+    =render "accounts/account_rows", account: account
   %tr.account_category
     %td Liabilities
-    %td.number_column= "%.2f" % accounts.liability.sum(:balance)
+    %td.number_column= "%.2f" % sum(accounts.liability)
     %td
   -accounts.liability.each do |account|
-    =render "accounts/account_row", :account => account
+    =render "accounts/account_rows", account: account
   %tr.account_category
     %td Equity
-    %td.number_column= "%.2f" % accounts.equity.sum(:balance)
+    %td.number_column= "%.2f" % sum(accounts.equity)
     %td
   -accounts.equity.each do |account|
-    =render "accounts/account_row", :account => account
+    =render "accounts/account_rows", account: account
   %tr.account_category
     %td Income
-    %td.number_column= "%.2f" % accounts.income.sum(:balance)
+    %td.number_column= "%.2f" % sum(accounts.income)
     %td
   -accounts.income.each do |account|
-    =render "accounts/account_row", :account => account
+    =render "accounts/account_rows", account: account
   %tr.account_category
     %td Expense
-    %td.number_column= "%.2f" % accounts.expense.sum(:balance)
+    %td.number_column= "%.2f" % sum(accounts.expense)
     %td
   -accounts.expense.each do |account|
-    =render "accounts/account_row", :account => account
+    =render "accounts/account_rows", account: account
 .actions
   =link_to 'Add', new_entity_account_path(@entity), class: 'add_button', title: 'Click here to add an account.'
