added reports controller with balance sheet and income statement actions. added partial balance sheet implementation

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -217,6 +217,11 @@ table.attributes {
   background-image: url(/assets/edit.png)
 }
 
+.show_button {
+  @extend .any_form_button;
+  background-image: url(/assets/show.png)
+}
+
 .delete_button {
   @extend .any_form_button;
   background-image: url(/assets/delete.png)
