--- a/app/views/entities/_navigation.html.haml
+++ b/app/views/entities/_navigation.html.haml
@@ -1,3 +1,4 @@
 %ul#nav_2
   %li= link_to 'Accounts', entity_accounts_path(current_entity)
   %li= link_to 'Transactions', entity_transactions_path(current_entity)
+  %li= link_to 'Reports', reports_entity_path(current_entity)
