changed balance sheet report to calculate totals as of the specified date instead of using the current account balance

--- a/app/views/reports/balance_sheet.html.haml
+++ b/app/views/reports/balance_sheet.html.haml
@@ -6,7 +6,7 @@
     =submit_tag 'Show', class: 'show_button', title: 'Click here to view the report with these filter setttings.'
     
 .report
-  %table{cellspacing: 0, cellpadding: 0}
+  %table#accounts_table{cellspacing: 0, cellpadding: 0}
     %tr
       %th Account
       %th Balance
