finished income statement report

--- a/app/views/reports/balance_sheet.html.haml
+++ b/app/views/reports/balance_sheet.html.haml
@@ -6,11 +6,4 @@
     =submit_tag 'Show', class: 'show_button', title: 'Click here to view the report with these filter setttings.'
     
 .report
-  %table#accounts_table{cellspacing: 0, cellpadding: 0}
-    %tr
-      %th Account
-      %th Balance
-    -@report.content.each do |r|
-      %tr{class: r[:depth] == 0 ? 'report_header' : 'report_data'}
-        %td{ class: "account_#{r[:depth]}" }= r[:account]
-        %td{ class: "number_column balance_#{r[:depth]}"}= r[:balance]
+  =render 'table', report: @report
