started working on new budget line item form

--- a/app/views/budget_items/index.html.haml
+++ b/app/views/budget_items/index.html.haml
@@ -1,1 +1,4 @@
 %h2#page_title Budget items
+
+.actions
+  =link_to 'Add', new_budget_budget_item_path(@budget), class: 'add_button', title: 'Click here to add a new item to the budget.'
