--- a/app/views/budgets/show.html.haml
+++ b/app/views/budgets/show.html.haml
@@ -5,6 +5,12 @@
     %th Name
     %td= @budget.name
   %tr
+    %th Period
+    %td= @budget.period
+  %tr
+    %th Period count
+    %td= @budget.period_count
+  %tr
     %th Start date
     %td= format_date(@budget.start_date)
   %tr
