--- a/app/views/budgets/new.html.haml
+++ b/app/views/budgets/new.html.haml
@@ -2,4 +2,4 @@
 
 =render "shared/errors", :resource => @budget
 =form_for([@entity, @budget]) do |f|
-  =render 'form_fields', f: f
+  =render 'form_fields', f: f, budget: @budget
