--- a/app/views/budget_items/_form_fields.html.haml
+++ b/app/views/budget_items/_form_fields.html.haml
@@ -2,3 +2,13 @@
   =f.label :account_id
   %br
   =f.select :account_id, account_options(@budget_item)
+=fields_for(:distributor) do |distributor_fields|
+  %div
+    =distributor_fields.label :method, 'Method'
+    %br
+    =distributor_fields.select :method, options_for_select(BudgetItemDistributor.methods)
+  =distributor_fields.fields_for(:args) do |args_fields|
+    %div
+      =args_fields.label :amount, 'Amount'
+      %br
+      =args_fields.number_field :amount
